doc: swagger
