# routes/cards/cards_routes.go
@@ -42,7 +42,7 @@ func SetupCardsRoutes(rg *gin.RouterGroup) {
 
 // @Summary Retorna dados de temperatura
 // @Description Retorna os dados de temperatura para o município e ano fornecidos
-// @Tags cards
+// @Tags cards/weather
 // @Accept json
 // @Produce json
 // @Param city query string true "Código de município"
@@ -60,7 +60,7 @@ func setupTemperatureRoutes(rg *gin.RouterGroup) {
 
 // @Summary Retorna dados de calor extremo
 // @Description Retorna os dados de calor extremo para o município e ano fornecidos
-// @Tags cards
+// @Tags cards/weather
 // @Accept json
 // @Produce json
 // @Param city query string true "Código de município"
@@ -78,7 +78,7 @@ func setupHeatRoutes(rg *gin.RouterGroup) {
 
 // @Summary Retorna dados de ranking de clima
 // @Description Retorna os dados de ranking em clima para o município e ano fornecidos
-// @Tags cards
+// @Tags cards/weather
 // @Accept json
 // @Produce json
 // @Param city query string true "Código de município"
@@ -94,6 +94,15 @@ func setupRankingRoutes(rg *gin.RouterGroup) {
 	rg.GET("/cards/weather/ranking", rankController.LoadRankingData)
 }
 
+// @Summary Retorna dados adicionais
+// @Description Retorna dados adicionais para o município fornecido
+// @Tags cards/weather
+// @Accept json
+// @Produce json
+// @Param city query string true "Código de município"
+// @Success 200 {object} []CardsDataItem
+// @Failure 400 {object} ErrorResponse
+// @Router /cards/weather/info [get]
 func setupInfoRoutes(rg *gin.RouterGroup) {
 	infoRepo := repositories_cards_weather.NewExternalWeatherInfoRepository()
 	infoService := services_cards_weather.NewWeatherInfoService(infoRepo)
